add traverse class

--- a/BST/BST.vcxproj.filters
+++ b/BST/BST.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="binaryNode.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="traverse.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
